Edits have been made based on the review